--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -1,6 +1,10 @@
 name: "Expense Tracker App by Abdul Moiz Lakhani"
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   build:
@@ -17,7 +21,7 @@ jobs:
       - uses: borales/actions-yarn@v2.3.0
         with:
           cmd: install
-      
+
       - name: Build React App
         run: sudo yarn build
 
