--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -1,6 +1,10 @@
 name: "Expense Tracker App by Abdul Moiz Lakhani"
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [pwa]
+  pull_request:
+    branches: [pwa]
 
 jobs:
   build:
@@ -17,7 +21,7 @@ jobs:
       - uses: borales/actions-yarn@v2.3.0
         with:
           cmd: install
-      
+
       - name: Build React App
         run: sudo yarn build
 
@@ -25,4 +29,4 @@ jobs:
         run: npm install --global surge
 
       - name: Deploy React App to Surge
-        run: surge ./build expense-tracker-amlakhani.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./build expense-tracker-pwa-amlakhani.surge.sh --token ${{ secrets.SURGE_TOKEN_PWA }}
