- Wrote service worker - Added offline page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Expense Tracker",
-  "name": "Expense Tracker",
+  "name": "Expense Tracker PWA",
   "description": "PWA Expense Tracker by Abdul Moiz Lakhani",
   "icons": [
     {
